[package]
name = "log_party"
version = "0.1.0"
edition = "2024"

[dependencies]
wasm-bindgen = "0.2.106"

[target.'cfg(target_arch="wasm32")'.dependencies]
wasm_safe_thread = { path = "../wasm_safe_thread" }
web-sys = { version = "0.3", features = ["console"] }
wasm-bindgen-test = "0.3.56"
console_error_panic_hook = "0.1.7"

[patch.crates-io]
wasm-bindgen = {path = "../wasm_safe_thread/reference/wasm-bindgen-drew"}
wasm-bindgen-test = {path = "../wasm_safe_thread/reference/wasm-bindgen-drew/crates/test"}
wasm-bindgen-futures = {path = "../wasm_safe_thread/reference/wasm-bindgen-drew/crates/futures"}
js-sys = {path = "../wasm_safe_thread/reference/wasm-bindgen-drew/crates/js-sys"}
web-sys = {path = "../wasm_safe_thread/reference/wasm-bindgen-drew/crates/web-sys"}
